--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 60px;
   position: fixed;
