--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 60px;
+  padding: 30px 0;
+  border-top: 1px solid var(--footer-border-color);
   z-index: 100;
 }
