헤더 디테일 변경

--- a/src/components/ThemeToggle/index.module.css
+++ b/src/components/ThemeToggle/index.module.css
@@ -2,5 +2,9 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+
+  color: var(--header-text-color);
+  opacity: 0.8;
+
   transition: color 0.5s ease;
 }
