--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,6 +11,7 @@
   --footer-border-color: rgba(0, 0, 0, 0.05);
 
   --post-card-image-border-color: hsl(230 25% 94%);
+  --post-card-image-dim-color: #000;
   --post-card-description-color: rgb(48 58 62);
 }
 [data-theme='dark'] {
@@ -26,5 +27,6 @@
   --footer-border-color: rgba(255, 255, 255, 0.05);
 
   --post-card-image-border-color: hsl(230 6% 23%);
+  --post-card-image-dim-color: #fff;
   --post-card-description-color: #768086;
 }
