--- a/src/layout/style.module.scss
+++ b/src/layout/style.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 60px auto;
+  margin: 0 auto;
+  padding: 60px 0;
   width: 1000px;
 }
