hedaer active 효과 추가

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -38,7 +38,7 @@ $hover-duration: 0.3s;
   transition: background-color $hover-duration ease-in-out;
 
   color: var(--header-text-color);
-  opacity: 0.8;
+  opacity: 0.7;
 
   transition: all $hover-duration ease-in-out;
 
@@ -51,4 +51,8 @@ $hover-duration: 0.3s;
 
     opacity: 1;
   }
+}
+
+.active {
+  opacity: 1;
 }
