footer 포지션 변경

--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -6,3 +6,12 @@
   border-top: 1px solid var(--footer-border-color);
   z-index: 100;
 }
+
+.scrollbar-true {
+  position: relative;
+}
+
+.scrollbar-false {
+  position: fixed;
+  bottom: 0;
+}
