스타일 변경: 마크다운 폰트 색상 업데이트

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -63,9 +63,9 @@ $content-image-max-height: 560px;
 .markdown {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  line-height: 1.5;
+  color: var(--markdown-font-color);
+  font-weight: 300;
   font-size: 16px;
-  font-weight: 500;
   line-height: 1.5;
   word-wrap: break-word;
 }
