--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -18,6 +18,8 @@
   --post-image-cradit-text-color: #768086;
 
   --tag-background--color: #f5f5f5;
+
+  --markdown-font-color: #060b11;
 }
 [data-theme='dark'] {
   --body-background-color: #191c1e;
@@ -39,4 +41,6 @@
   --post-image-cradit-text-color: #768086;
 
   --tag-background--color: #282b31;
+
+  --markdown-font-color: rgba(255, 255, 255, 0.8);
 }
