--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -31,14 +31,15 @@ $hover-duration: 0.3s;
 }
 
 .list-item {
-  padding: 10px;
+  padding: 12px;
   margin-right: 5px;
   border-radius: 10px;
 
-  transition: background-color $hover-duration ease-in-out;
-
   color: var(--header-text-color);
-  opacity: 0.7;
+  font-weight: 300;
+  letter-spacing: 1px;
+
+  opacity: 0.5;
 
   transition: all $hover-duration ease-in-out;
 
