--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -28,11 +28,11 @@ $hover-duration: 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
 .list-item {
   padding: 12px;
-  margin-right: 5px;
   border-radius: 10px;
 
   color: var(--header-text-color);
@@ -52,6 +52,15 @@ $hover-duration: 0.3s;
 
     opacity: 1;
   }
+}
+
+.list-item-add-on {
+  color: var(--header-text-color);
+}
+
+.github-icon {
+  width: 25px;
+  height: 25px;
 }
 
 .active {
