--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -48,7 +48,7 @@ $hover-duration: 0.3s;
   }
 
   &:hover {
-    background-color: var(--header-menu-hover-bg-color);
+    // background-color: var(--header-menu-hover-bg-color);
 
     opacity: 1;
   }
@@ -59,6 +59,7 @@ $hover-duration: 0.3s;
 }
 
 .github-icon {
+  color: var(--header-text-color);
   width: 25px;
   height: 25px;
 }
